--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
 	},
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-textarea-autosize": "^8.5.0"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react-swc": "^3.0.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.43.0",
 		"eslint-config-react-app": "^7.0.1",
+		"postcss": "^8.4.24",
+		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.9",
 		"vite-plugin-eslint": "^1.8.1"
 	}
